# 6-Python_Game_Breakout_game

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  config.py  main.py  pyproject.toml  setup.py
entities/: ball.py  brick.py  game_object.py  paddle.py
game/: game.py
levels/: level_editor.py  level_patterns.json
systems/: collision.py  level.py  score.py  ui.py
